--- a/blog-style.css
+++ b/blog-style.css
@@ -4,12 +4,61 @@
     box-sizing: border-box;
     
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    
 
 }
 
 body{
-    background-color: blue;
+    background-color: rgb(246, 246, 254);
     
 
 }
+
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+
+    background: url(flowers\ 5.jpeg);
+    
+    background-position: center;
+    background-repeat: center;
+    background-size: cover;
+
+
+}
+
+header h1{
+    text-align: center;
+    color: deeppink;
+    font-size: 8rem;
+    margin-bottom: 3rem;
+
+
+}
+
+footer{
+    position: center;
+     width: 100%;
+    height: 5rem;
+    background-color: hotpink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:2rem;
+
+}
+
+.container{
+    padding: 5rem 10rem;
+    color:black
+    
+}
+
+article{
+    box-sizing: border-box;
+    margin-bottom: 5rem;
+    box-shadow: 5px 5px 5px #9999;
+}
+
